--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": "^7.2",
         "doctrine/annotations": "^1.8",
         "doctrine/dbal": "^2.10.0",
-        "doctrine/doctrine-bundle": "^2.0.3",
+        "doctrine/doctrine-bundle": "^1.12.3|^2.0.3",
         "doctrine/inflector": "^1.3",
         "doctrine/orm": "^2.7",
         "doctrine/persistence": "^1.1",
