--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "doctrine/doctrine-bundle": "^1.12.3|^2.0.3",
         "doctrine/inflector": "^1.3",
         "doctrine/orm": "^2.7",
-        "doctrine/persistence": "^1.1",
+        "doctrine/persistence": "^1.1|^2.0",
         "symfony/config": "^4.4|^5.0",
         "symfony/console": "^4.4|^5.0",
         "symfony/doctrine-bridge": "^4.4.6|^5.0.6",
