--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,13 @@
     "require": {
         "php": "^7.2",
         "doctrine/annotations": "^1.8",
+        "doctrine/collections": "^1.0",
         "doctrine/dbal": "^2.10.0",
         "doctrine/doctrine-bundle": "^1.12.3|^2.0.3",
         "doctrine/inflector": "^1.3",
         "doctrine/orm": "^2.7",
         "doctrine/persistence": "^1.1|^2.0",
+        "nikic/php-parser": "^4.0",
         "symfony/config": "^4.4|^5.0",
         "symfony/console": "^4.4|^5.0",
         "symfony/doctrine-bridge": "^4.4.6|^5.0.6",
