--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "doctrine/collections": "^1.0",
         "doctrine/dbal": "^2.10.0",
         "doctrine/doctrine-bundle": "^1.12.3|^2.0.3",
-        "doctrine/inflector": "^1.3",
+        "doctrine/inflector": "^1.4|^2.0",
         "doctrine/orm": "^2.7",
         "doctrine/persistence": "^1.1|^2.0",
         "nikic/php-parser": "^4.0",
