--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     },
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "doctrine/annotations": "^1.8",
         "doctrine/collections": "^1.0",
         "doctrine/dbal": "^2.10.0",
@@ -30,9 +30,10 @@
         "doctrine/inflector": "^1.4|^2.0",
         "doctrine/orm": "^2.7",
         "doctrine/persistence": "^1.1|^2.0",
-        "nikic/php-parser": "^4.0",
-        "symfony/config": "^4.4|^5.0",
+        "nikic/php-parser": "^4.7.0",
+        "symfony/config": "^4.4.12|^5.1.4",
         "symfony/console": "^4.4|^5.0",
+        "symfony/dependency-injection": "^4.4.12|^5.1.4",
         "symfony/doctrine-bridge": "^4.4.6|^5.0.6",
         "symfony/framework-bundle": "^4.4|^5.0",
         "symfony/http-kernel": "^4.4|^5.0",
