--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/doctrine-bridge": "^4.4.6|^5.0.6",
         "symfony/framework-bundle": "^4.4|^5.0",
         "symfony/http-kernel": "^4.4|^5.0",
+        "symfony/polyfill-php80": "^1.19",
         "symfony/property-info": "^4.4|^5.0",
         "symfony/twig-bundle": "^4.4|^5.0",
         "twig/twig": "^2.12.0|^3.0"
