--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,10 +40,13 @@ jobs:
                     -   php-version: '8.0'
                         symfony-version: '^5'
                         description: 'with SF ^5'
+                    -   php-version: '7.4' #https://github.com/FriendsOfPHP/PHP-CS-Fixer/issues/5437
+                        description: 'with Coding Standards'
+                        coding-standards: true
 
         name: PHP ${{ matrix.php-version }} ${{ matrix.description }}
 
-        runs-on: 'ubuntu-20.04'
+        runs-on: 'ubuntu-latest'
 
         steps:
             -   name: Checkout
@@ -72,12 +75,8 @@ jobs:
                 uses: actions/cache@v2
                 with:
                     path: ${{ steps.composer-cache.outputs.dir }}
-                    key: composer-${{ runner.os }}-${{ matrix.php-version }}-${{ hashFiles('**/composer.*') }}-${{ matrix.composer-flags }} #cs
-                    restore-keys: |
-                        composer-${{ runner.os }}-${{ matrix.php-version }}-${{ hashFiles('**/composer.*') }}-
-                        composer-${{ runner.os }}-${{ matrix.php-version }}-
-                        composer-${{ runner.os }}-
-                        composer-
+                    key: composer-${{ runner.os }}-${{ matrix.php-version }}-${{ hashFiles('**/composer.*') }}-${{ matrix.composer-flags }}
+                    restore-keys: composer-${{ runner.os }}-${{ matrix.php-version }}-
 
             -   name: Configure Symfony Flex
                 if: matrix.symfony-version
@@ -87,9 +86,11 @@ jobs:
                 run: composer update --no-interaction --no-progress ${{ matrix.composer-flags }}
 
             -   name: Run PHPUnit
+                if: matrix.coding-standards != true
                 run: php vendor/phpunit/phpunit/phpunit
 
             -   name: Run PHP CS Fixer
+                if: matrix.coding-standards
                 env:
                     PHP_CS_FIXER_IGNORE_ENV: 1
                 run: php vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --diff --dry-run -v
