--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
                     -   php-version: '8.1'
                         symfony-version: '^5'
                         description: 'with SF ^5'
-                    -   php-version: '7.4' #https://github.com/FriendsOfPHP/PHP-CS-Fixer/issues/5437
+                    -   php-version: '8.1'
                         description: 'with Coding Standards'
                         coding-standards: true
 
@@ -91,6 +91,4 @@ jobs:
 
             -   name: Run PHP CS Fixer
                 if: matrix.coding-standards
-                env:
-                    PHP_CS_FIXER_IGNORE_ENV: 1
                 run: php vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --diff --dry-run -v
