--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,33 +13,26 @@ jobs:
             fail-fast: false
             matrix:
                 include:
+                    #Mini
                     -   php-version: '7.2'
                         composer-flags: '--prefer-stable --prefer-lowest'
                         description: 'with lowest'
-                    -   php-version: '7.2'
-                        symfony-version: '^4'
-                        description: 'with SF ^4'
-                    -   php-version: '7.2'
-                        symfony-version: '^5'
-                        description: 'with SF ^5'
-                    -   php-version: '7.4'
-                        symfony-version: '^4'
-                        description: 'with SF ^4'
-                    -   php-version: '7.4'
-                        symfony-version: '^5'
-                        description: 'with SF ^5'
-                    -   php-version: '8.0'
-                        symfony-version: '^4'
-                        description: 'with SF ^4'
-                    -   php-version: '8.0'
-                        symfony-version: '^5'
-                        description: 'with SF ^5'
+
+                    #Symfony versions
                     -   php-version: '8.1'
-                        symfony-version: '^4'
-                        description: 'with SF ^4'
+                        symfony-version: '^4.4'
+                        description: 'with SF ^4.4'
                     -   php-version: '8.1'
-                        symfony-version: '^5'
-                        description: 'with SF ^5'
+                        symfony-version: '^5.4'
+                        description: 'with SF ^5.4'
+
+                    #PHP versions
+                    -   php-version: '7.2'
+                    -   php-version: '7.4'
+                    -   php-version: '8.0'
+                    -   php-version: '8.1'
+
+                    #CS
                     -   php-version: '8.1'
                         description: 'with Coding Standards'
                         coding-standards: true
