--- a/composer.json
+++ b/composer.json
@@ -31,26 +31,26 @@
         "doctrine/orm": "^2.7",
         "doctrine/persistence": "^1.1|^2.0",
         "nikic/php-parser": "^4.7.0",
-        "symfony/config": "^4.4.12|^5.1.4",
-        "symfony/console": "^4.4|^5.0",
-        "symfony/dependency-injection": "^4.4.12|^5.1.4",
-        "symfony/doctrine-bridge": "^4.4.6|^5.0.6",
+        "symfony/config": "^4.4.12|^5.4",
+        "symfony/console": "^4.4|^5.4",
+        "symfony/dependency-injection": "^4.4.12|^5.4",
+        "symfony/doctrine-bridge": "^4.4.6|^5.4",
         "symfony/framework-bundle": "^4.4.38|^5.4.5",
-        "symfony/http-kernel": "^4.4|^5.0",
+        "symfony/http-kernel": "^4.4|^5.4",
         "symfony/polyfill-php80": "^1.19",
-        "symfony/property-info": "^4.4|^5.0",
-        "symfony/twig-bundle": "^4.4|^5.0",
+        "symfony/property-info": "^4.4|^5.4",
+        "symfony/twig-bundle": "^4.4|^5.4",
         "twig/twig": "^2.12.0|^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "phpunit/phpunit": "^8.4",
-        "symfony/filesystem": "^4.4|^5.0",
-        "symfony/finder": "^4.4|^5.0",
-        "symfony/yaml": "^4.4|^5.0"
+        "phpunit/phpunit": "^8.5.23",
+        "symfony/filesystem": "^4.4|^5.4",
+        "symfony/finder": "^4.4|^5.4",
+        "symfony/yaml": "^4.4|^5.4"
     },
     "conflict": {
-        "symfony/doctrine-bridge": "4.4.34|5.3.11"
+        "symfony/doctrine-bridge": "4.4.34"
     },
     "config": {
         "sort-packages": true
