--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,6 @@
         "php": "^7.2|^8.0",
         "doctrine/annotations": "^1.8",
         "doctrine/collections": "^1.0",
-        "doctrine/dbal": "^2.10.0",
         "doctrine/doctrine-bundle": "^1.12.3|^2.4.5",
         "doctrine/inflector": "^1.4|^2.0",
         "doctrine/orm": "^2.7",
@@ -43,6 +42,7 @@
         "twig/twig": "^2.12.0|^3.0"
     },
     "require-dev": {
+        "doctrine/dbal": "^2.10.0|^3.0",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpunit/phpunit": "^8.5.23",
         "symfony/filesystem": "^5.4|^6.0",
