--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     },
     "require": {
         "php": "^7.2|^8.0",
+        "ext-mbstring": "*",
         "doctrine/annotations": "^1.8",
         "doctrine/collections": "^1.0",
         "doctrine/doctrine-bundle": "^1.12.3|^2.4.5",
