Replace Psalm by PHPStan

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -120,6 +120,8 @@ jobs:
                 if: matrix.coding-standards
                 run: cat LICENSE |grep -E "\(c\) ([0-9]+\-)*`date +%G`"
 
-            -   name: Run Psalm
+            -   name: Run PHPStan
                 if: matrix.static-analysis
-                run: php vendor/bin/psalm --stats --output-format=github
+                run: |
+                    php tests/phpstan/console-application.php about > /dev/null
+                    php vendor/bin/phpstan --no-progress --error-format=github
