--- a/composer.json
+++ b/composer.json
@@ -45,13 +45,18 @@
     "require-dev": {
         "doctrine/dbal": "^2.13.4|^3.1.4",
         "friendsofphp/php-cs-fixer": "^3.0",
+        "phpstan/extension-installer": "^1.2",
+        "phpstan/phpstan": "^1.9",
+        "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^8.5.23",
         "symfony/filesystem": "^5.4|^6.0",
         "symfony/finder": "^5.4|^6.0",
-        "symfony/yaml": "^5.4|^6.0",
-        "vimeo/psalm": "^4.23"
+        "symfony/yaml": "^5.4|^6.0"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        }
     }
 }
