--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": "^7.4|^8.0",
         "ext-mbstring": "*",
         "doctrine/annotations": "^1.8",
-        "doctrine/collections": "^1.0",
+        "doctrine/collections": "^1.0|^2.0",
         "doctrine/doctrine-bundle": "^1.12.3|^2.4.5",
         "doctrine/inflector": "^1.4|^2.0",
         "doctrine/orm": "^2.7",
