--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -24,3 +24,7 @@ parameters:
             paths:
                 - src/EntityGenerator/EntityGenerator.php
                 - src/EntitySearcher/EntitySearcher.php
+        - # PHP 8 is required (with union types)
+            message: '#__construct\(\) has parameter \$data with no type specified#'
+            paths:
+                - src/Annotations/GenerateEntityTemplate.php
