--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1.x-dev"
+            "dev-master": "1.2.x-dev"
         }
     },
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "ext-mbstring": "*",
         "doctrine/annotations": "^1.8|^2.0",
         "doctrine/collections": "^1.0|^2.0",
