--- a/composer.json
+++ b/composer.json
@@ -30,15 +30,15 @@
         "doctrine/orm": "^2.7",
         "doctrine/persistence": "^1.1|^2.0|^3.0",
         "nikic/php-parser": "^4.10",
-        "symfony/config": "^5.4|^6.3",
-        "symfony/console": "^5.4|^6.3",
-        "symfony/dependency-injection": "^5.4|^6.3",
-        "symfony/doctrine-bridge": "^5.4.3|^6.3.3",
-        "symfony/framework-bundle": "^5.4.5|^6.3.5",
-        "symfony/http-kernel": "^5.4|^6.3",
+        "symfony/config": "^5.4|^6.3|^7.0",
+        "symfony/console": "^5.4|^6.3|^7.0",
+        "symfony/dependency-injection": "^5.4|^6.3|^7.0",
+        "symfony/doctrine-bridge": "^5.4.3|^6.3.3|^7.0",
+        "symfony/framework-bundle": "^5.4.5|^6.3.5|^7.0",
+        "symfony/http-kernel": "^5.4|^6.3|^7.0",
         "symfony/polyfill-php80": "^1.19",
-        "symfony/property-info": "^5.4|^6.3",
-        "symfony/twig-bundle": "^5.4|^6.3",
+        "symfony/property-info": "^5.4|^6.3|^7.0",
+        "symfony/twig-bundle": "^5.4|^6.3|^7.0",
         "twig/twig": "^2.12.0|^3.0"
     },
     "require-dev": {
@@ -48,9 +48,9 @@
         "phpstan/phpstan": "^1.9",
         "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^9.5",
-        "symfony/filesystem": "^5.4|^6.3",
-        "symfony/finder": "^5.4|^6.3",
-        "symfony/yaml": "^5.4|^6.3"
+        "symfony/filesystem": "^5.4|^6.3|^7.0",
+        "symfony/finder": "^5.4|^6.3|^7.0",
+        "symfony/yaml": "^5.4|^6.3|^7.0"
     },
     "config": {
         "sort-packages": true,
