--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     },
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-mbstring": "*",
         "doctrine/collections": "^1.0|^2.0",
         "doctrine/doctrine-bundle": "^1.12.3|^2.4.5",
@@ -30,14 +30,14 @@
         "doctrine/orm": "^2.7",
         "doctrine/persistence": "^1.1|^2.0|^3.0",
         "nikic/php-parser": "^4.10",
-        "symfony/config": "^5.4|^6.4|^7.0",
-        "symfony/console": "^5.4|^6.4|^7.0",
-        "symfony/dependency-injection": "^5.4|^6.4|^7.0",
-        "symfony/doctrine-bridge": "^5.4.3|^6.4|^7.0",
-        "symfony/framework-bundle": "^5.4.5|^6.4|^7.0",
-        "symfony/http-kernel": "^5.4|^6.4|^7.0",
-        "symfony/property-info": "^5.4|^6.4|^7.0",
-        "symfony/twig-bundle": "^5.4|^6.4|^7.0",
+        "symfony/config": "^6.4|^7.0",
+        "symfony/console": "^6.4|^7.0",
+        "symfony/dependency-injection": "^6.4|^7.0",
+        "symfony/doctrine-bridge": "^6.4|^7.0",
+        "symfony/framework-bundle": "^6.4|^7.0",
+        "symfony/http-kernel": "^6.4|^7.0",
+        "symfony/property-info": "^6.4|^7.0",
+        "symfony/twig-bundle": "^6.4|^7.0",
         "twig/twig": "^2.12.0|^3.0"
     },
     "require-dev": {
@@ -47,9 +47,9 @@
         "phpstan/phpstan": "^1.9",
         "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^9.5",
-        "symfony/filesystem": "^5.4|^6.4|^7.0",
-        "symfony/finder": "^5.4|^6.4|^7.0",
-        "symfony/yaml": "^5.4|^6.4|^7.0"
+        "symfony/filesystem": "^6.4|^7.0",
+        "symfony/finder": "^6.4|^7.0",
+        "symfony/yaml": "^6.4|^7.0"
     },
     "config": {
         "sort-packages": true,
