--- a/composer.json
+++ b/composer.json
@@ -18,17 +18,17 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.x-dev"
+            "dev-master": "3.x-dev"
         }
     },
     "require": {
         "php": "^8.1",
         "ext-mbstring": "*",
-        "doctrine/collections": "^1.0|^2.0",
-        "doctrine/doctrine-bundle": "^1.12.3|^2.4.5",
+        "doctrine/collections": "^2.0",
+        "doctrine/doctrine-bundle": "^2.11.1",
         "doctrine/inflector": "^1.4|^2.0",
-        "doctrine/orm": "^2.7",
-        "doctrine/persistence": "^1.1|^2.0|^3.0",
+        "doctrine/orm": "^3.2",
+        "doctrine/persistence": "^3.1",
         "nikic/php-parser": "^4.10",
         "symfony/config": "^6.4|^7.0",
         "symfony/console": "^6.4|^7.0",
@@ -41,7 +41,7 @@
         "twig/twig": "^2.12.0|^3.0"
     },
     "require-dev": {
-        "doctrine/dbal": "^2.13.4|^3.1.4",
+        "doctrine/dbal": "^3.6|^4.0",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpstan/extension-installer": "^1.2",
         "phpstan/phpstan": "^1.9",
