Add nikic/php-parser v5 support

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -12,3 +12,18 @@ parameters:
             paths:
                 - tests/App/Entity/
                 - tests/App/GeneratedEntity/
+
+
+        # Legacy Support for nikic/php-parser v4
+        -
+            message: '#Call to an undefined method PhpParser\\Lexer\\Emulative::getTokens\(\)#'
+            path: src/EntityGenerator/Util/UseStatementManipulator.php
+        -
+            message: '#Call to function is_callable\(\) with array\{PhpParser\\Parser, ''getTokens''\} will always evaluate to true#'
+            path: src/EntityGenerator/Util/UseStatementManipulator.php
+        -
+            message: '#Parameter \#1 \$phpVersion of class PhpParser\\Lexer\\Emulative constructor expects PhpParser\\PhpVersion\|null, array\<string, array\<int, string\>\> given#'
+            path: src/EntityGenerator/Util/UseStatementManipulator.php
+        -
+            message: '#Parameter \#3 \$origTokens of method PhpParser\\PrettyPrinterAbstract::printFormatPreserving\(\) expects array\<PhpParser\\Token\>, array given#'
+            path: src/EntityGenerator/Util/UseStatementManipulator.php
