--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "doctrine/inflector": "^1.4|^2.0",
         "doctrine/orm": "^3.2",
         "doctrine/persistence": "^3.1",
-        "nikic/php-parser": "^4.10",
+        "nikic/php-parser": "^4.10|^5.0",
         "symfony/config": "^6.4|^7.0",
         "symfony/console": "^6.4|^7.0",
         "symfony/dependency-injection": "^6.4|^7.0",
