--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "doctrine/inflector": "^1.4|^2.0",
         "doctrine/orm": "^2.7",
         "doctrine/persistence": "^1.1|^2.0|^3.0",
-        "nikic/php-parser": "^4.10",
+        "nikic/php-parser": "^4.10|^5.0",
         "symfony/config": "^6.4|^7.1",
         "symfony/console": "^6.4|^7.1",
         "symfony/dependency-injection": "^6.4|^7.1",
