--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -123,11 +123,11 @@ jobs:
 
             -   name: Run PHPUnit
                 if: matrix.coding-standards != true && matrix.analyze-dependencies != true && matrix.static-analysis != true
-                run: php vendor/phpunit/phpunit/phpunit
+                run: php vendor/bin/phpunit
 
             -   name: Run PHP CS Fixer
                 if: matrix.coding-standards
-                run: php vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --diff --dry-run -v
+                run: php vendor/bin/php-cs-fixer fix --diff --dry-run -v
 
             -   name: Check license year
                 if: matrix.coding-standards
