--- a/composer.json
+++ b/composer.json
@@ -18,38 +18,39 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.x-dev"
+            "dev-master": "4.x-dev"
         }
     },
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "ext-mbstring": "*",
         "doctrine/collections": "^2.0",
-        "doctrine/doctrine-bundle": "^2.11.1",
+        "doctrine/doctrine-bundle": "^2.11.1|^3.0",
         "doctrine/inflector": "^1.4|^2.0",
         "doctrine/orm": "^3.2",
-        "doctrine/persistence": "^3.1",
+        "doctrine/persistence": "^3.3|^4.0",
         "nikic/php-parser": "^4.10|^5.0",
-        "symfony/config": "^6.4|^7.3",
-        "symfony/console": "^6.4|^7.3",
-        "symfony/dependency-injection": "^6.4|^7.3",
-        "symfony/doctrine-bridge": "^6.4|^7.3",
-        "symfony/framework-bundle": "^6.4|^7.3",
-        "symfony/http-kernel": "^6.4|^7.3",
-        "symfony/property-info": "^6.4|^7.3",
-        "symfony/twig-bundle": "^6.4|^7.3",
-        "twig/twig": "^2.12.0|^3.0"
+        "symfony/config": "^7.3|^8.0",
+        "symfony/console": "^7.3|^8.0",
+        "symfony/dependency-injection": "^7.3|^8.0",
+        "symfony/doctrine-bridge": "^7.3|^8.0",
+        "symfony/framework-bundle": "^7.3|^8.0",
+        "symfony/http-kernel": "^7.3|^8.0",
+        "symfony/property-info": "^7.3|^8.0",
+        "symfony/twig-bundle": "^7.3|^8.0",
+        "symfony/type-info": "^7.3|^8.0",
+        "twig/twig": "^3.0"
     },
     "require-dev": {
-        "doctrine/dbal": "^3.6|^4.0",
+        "doctrine/dbal": "^3.8|^4.0",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpstan/extension-installer": "^1.2",
         "phpstan/phpstan": "^2.0",
         "phpstan/phpstan-symfony": "^2.0",
         "phpunit/phpunit": "^10.0",
-        "symfony/filesystem": "^6.4|^7.3",
-        "symfony/finder": "^6.4|^7.3",
-        "symfony/yaml": "^6.4|^7.3"
+        "symfony/filesystem": "^7.3|^8.0",
+        "symfony/finder": "^7.3|^8.0",
+        "symfony/yaml": "^7.3|^8.0"
     },
     "config": {
         "sort-packages": true,
