--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -39,6 +39,10 @@ parameters:
                 - tests/App/Entity/ReadOnlyField.php
                 - tests/App/GeneratedEntity/ReadOnlyField.php
 
+        # @legacy SF <= 7.4
+        -
+            message: '#Call to function method_exists\(\) with Symfony\\Component\\Console\\Application and .addCommand. will always evaluate to true#'
+
         # Legacy Support for nikic/php-parser v4
         -
             message: '#Call to an undefined method PhpParser\\Lexer\\Emulative::getTokens\(\)#'
