--- a/composer.json
+++ b/composer.json
@@ -30,14 +30,14 @@
         "doctrine/orm": "^3.2",
         "doctrine/persistence": "^3.3|^4.0",
         "nikic/php-parser": "^4.10|^5.0",
-        "symfony/config": "^7.3|^8.0",
-        "symfony/console": "^7.3|^8.0",
-        "symfony/dependency-injection": "^7.3|^8.0",
+        "symfony/config": "^6.4|^7.3|^8.0",
+        "symfony/console": "^6.4|^7.3|^8.0",
+        "symfony/dependency-injection": "^6.4|^7.3|^8.0",
         "symfony/doctrine-bridge": "^7.3|^8.0",
-        "symfony/framework-bundle": "^7.3|^8.0",
-        "symfony/http-kernel": "^7.3|^8.0",
-        "symfony/property-info": "^7.3|^8.0",
-        "symfony/twig-bundle": "^7.3|^8.0",
+        "symfony/framework-bundle": "^6.4|^7.3|^8.0",
+        "symfony/http-kernel": "^6.4|^7.3|^8.0",
+        "symfony/property-info": "^6.4|^7.3|^8.0",
+        "symfony/twig-bundle": "^6.4|^7.3|^8.0",
         "symfony/type-info": "^7.3|^8.0",
         "twig/twig": "^3.0"
     },
@@ -48,9 +48,9 @@
         "phpstan/phpstan": "^2.0",
         "phpstan/phpstan-symfony": "^2.0",
         "phpunit/phpunit": "^10.0",
-        "symfony/filesystem": "^7.3|^8.0",
-        "symfony/finder": "^7.3|^8.0",
-        "symfony/yaml": "^7.3|^8.0"
+        "symfony/filesystem": "^6.4|^7.3|^8.0",
+        "symfony/finder": "^6.4|^7.3|^8.0",
+        "symfony/yaml": "^6.4|^7.3|^8.0"
     },
     "config": {
         "sort-packages": true,
