--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "doctrine/orm": "^3.2",
         "doctrine/persistence": "^3.3|^4.0",
         "nikic/php-parser": "^4.10|^5.0",
+        "phpstan/phpdoc-parser": "^1.0|^2.0",
         "symfony/config": "^6.4|^7.4|^8.0",
         "symfony/console": "^6.4|^7.4|^8.0",
         "symfony/dependency-injection": "^6.4|^7.4|^8.0",
