--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": "^8.2",
         "ext-mbstring": "*",
-        "doctrine/collections": "^2.0",
+        "doctrine/collections": "^2.0|^3.0",
         "doctrine/doctrine-bundle": "^2.11.1|^3.0",
         "doctrine/inflector": "^1.4|^2.0",
         "doctrine/orm": "^3.2",
